--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -21,4 +21,5 @@
     <color name="theme_primary_dark">#2E7D32</color>
     <color name="theme_accent">#FF80AB</color>
     <color name="ltgray">#ffe0e0e0</color>
+    <color name="overlay_action_bar">#77d3d3d3</color>
 </resources>
